--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -116,9 +116,9 @@ div#content {
     color: $darkGrey;
   }
   form {
- 	@include rounded;
+/* 	@include rounded;
 	background-color: $yellow;
-/*  padding-top: 15px;
+  padding-top: 15px;
   padding-left: 5px;*/
     input.submit {
         @include fancy-button(#FF4E00, 13px);
