--- a/app/stylesheets/expenses.scss
+++ b/app/stylesheets/expenses.scss
@@ -1,179 +1,1 @@
-@import "partials/base";
-
-body#projects { 
-  div#projectForm {
-    div.wrapper {
-      @include rounded;
-      background-color: $yellow;
-	    border: 1px solid grey;
-	    border-top:5px solid $orangeRed;
-	  } 
-	 a {display: block; font-weight:bold; padding: 0px 0px 15px 15px; color: white;}
-	
-  div#createProject {
-    @include grid(52,1,2);
-    legend dl dt { text-align: left;}
-    dl dd, dl dt, legend { margin-bottom: 10px;}
-    dl dt.title { @include grid(8); font-weight:bold;}
-    dl dd.title { @include grid(42); }
-    dl dd.title input { width: 420px;}
-    dl dt.description { @include grid(10,0,40); font-weight:bold;}
-    dl dd.description { @include grid(50);  }
-    dl dd.description textarea {
-      height: 60px;
-      width: 500px;
-    }
-    dl dt.small { @include grid(11);  }
-    dl dd.small { @include grid(6); }
-    dl dd.small input { width: 40px; }
-    dl dt.submit {@include grid(16);}
-    dl dt.submit input.submit {margin:0px;}
-  }
-    div#selectCustomer {
-    fieldset.customer { margin-top: 27px; }
-    @include grid(34);
-    dl dt { @include grid(10,1,2); }
-    dl dd {@include grid(18);}
-    dl dd select { width: 180px; }
-  }
-  }
-  
-  div.toolbar li, ul.title li { @include grid(29,0,0,1,1); }
-  ul.title li.nr { @include grid(6); }
-  div.toolbar li.nr{ @include grid(7); }
-  div.toolbar li{ @include grid(30.5); }
-  ul.title li.date { @include grid(12); }
-  div.toolbar li.date{ @include grid(16); }
-  ul.title li.actions {
-    @include grid(8);
-    text-align: right;
-  }
-}
-
-
-div.project {
-  div.projectInformation {
-    dl dt { font-weight: bold; }
-    dl dt, dl dd { @include grid(8); }
-    dl dt.description, dl dd.description { @include grid(80, 0, 14); margin-bottom: 10px; }
-  }
-  div.contacts {
-    margin-top: 20px;
-    ul.record li span { display: block; }
-    li.actions { text-align: right; }
-    ul.toolbar, ul.record {
-      li { @include grid(27) }
-      li.actions { @include grid(7) }
-    }
-    span.formAction {
-      text-align: right;
-      @include grid(30);
-      form {
-        display: inline;
-        padding: 0px !important;
-      }
-    }
-    h2.formAction { @include grid(58); }
-  }
-  div.expenses {
-    ul.toolbar, ul.record {
-      li.from { @include grid(27) }
-      li.description { @include grid(50) }
-      li.amount { @include grid(7) }
-      li.actions { @include grid(7) }
-    }
-  }
-}
-
-
-div.project {
-  color: $darkGrey;
-  margin-bottom: 5px;
-  div.nestedRessources {
-    @include roundedBottom;
-    background-color: white;
-    border-left: 1px solid grey;
-    border-right: 1px solid grey;;
-    border-bottom: 1px solid grey;
-    padding: 0px 0px;
-    
-    div.projectInformation, div.contacts, div.expenses {
-      background-color: white;
-      @include roundedTop;
-  	  @include roundedBottom;
-  	  border-top:5px solid $darkGrey;
-      padding: 8px;
-    }
-    hr { width: 100%; visibility: visible; }
-    h2, div.details span.actions, form legend {
-      font-weight: bold;
-	    color: $darkRed;
-      font-size: 11px;
-    }
-    h2, form legend { @include grid(78) }
-    span.actions, form a {
-      @include grid(10);
-      text-align: right;
-    }
-    ul.toolbar {
-      border-bottom: 2px dotted grey;
-      li { color: grey; }
-    }
-  }
-}
-
-
-body#report  {
-	@include gradient(white, white);
-	div#content { width: 680px; margin: 0px 20px;}
-	p.sender{
-	padding: 15px 0px 10px 0px; 
-	font-size: 7pt!important;
-	}
-	
-	adress {
-	font-size: 8pt;
-	}
-	
-	h1 {
-	margin-top: 15px; 
-	font-weight: bold; 
-	font-size:14pt;
-	}
-	h2 { 
-	margin-top: 15px; 
-	margin-bottom: 15px; 
-	font-weight: bold; 
-	font-size:8pt; 
-	border-bottom: 2px solid $grey;
-	}
-	
-	div#works{
-  	ul{ 
-  	padding-bottom: 5px;
-  	border-bottom: 1px dashed grey;
-  		li.time{ padding: 5px 0px; @include grid(10,0,1);	}
-  		li.description{
-  		  padding: 5px 0px;
-  		  color: $orangeRed;
-  		  @include grid(36,0,1);
-  		}
-  		li.duration, li.sum {
-  		  @include grid(10,0,0);
-  		  padding: 5px 0px;
-  		  text-align: right;
-  		}
-  	}
-  	dl#sum {
-  	  dd, dt { font-size: 14px; padding: 3px 0px;}
-  	  dt { @include grid(58); }
-  	  dt.duration { @include grid(48); }
-  	  dd {
-  	    text-align: right;
-  	    @include grid(10);
-  	  }
-  	  .discount, .tax { border-bottom: 2px solid black;}
-  	  .tax, .net, .final { font-weight: bold; }
-  	}
-  }
-}
+@import "projects";
