--- a/app/stylesheets/partials/_form.scss
+++ b/app/stylesheets/partials/_form.scss
@@ -2,125 +2,144 @@ $blueprint_grid_columns: 90;
 $blueprint_grid_width: 10px;
 $blueprint-grid-margin: 0px;
 
-div#top_form {
-  form {
-    /* BASIC DEFINITION */
-    legend {
-      color: #730303;
-      font-size: 14px;
-      font-weight: bold;
-      padding: 10px;
-    }
-    li.field {
-      @include column(25);
-      @include border-radius(6px);
-      @include box-shadow(inset 0px 2px 2px #B2B3B5, 0px 1px 0 #fff);
-      @include background-image(linear-gradient(top center, #E9E9E9, #D7D7D7));
-      height: 25px;
-      padding: 10px;
-      margin: 10px;
-      position: relative;
-    
-      input, textarea {
-        @include border-radius(6px);
-        @include box-shadow(0 1px 1px #9A9A9A inset);
-        @include background-image(linear-gradient(center top, #F3F3F3,  #FFFFFF));
-        height: 25px;
-        width: 230px;
-        padding: 1px 10px 0px 10px;
-        border: medium none;
-        font-size: 15px;
-      }
-      select {
-        width: 250px;
-        height: 27px;
-        font-size: 15px;
-      }
-      label {
-        position: absolute;
-        top: 15px;
-        left: 21px;
-        font-size: 15px;
-      }
-    
-      input.left {
-        @include border-left-radius(6px);
-        @include border-right-radius(0px);
-      }
-      input.middle {
-        @include border-left-radius(0px);
-        @include border-right-radius(0px);
-      }
-      input.right {
-        @include border-left-radius(0px);
-        @include border-right-radius(6px);
-      }
-    }
-  
-    li.half {
-      input { width: 103px; }
-      select { width: 110px; }
-      label.right { left: 147px; }
-    }
-    li.third {
-      input.left { width: 50px; }
-      select { width: 70px; }
-      input.right { width: 155px; }
-      label.right { left: 95px; }
-    }
-    li.twoColumn {
-      width: 556px;
-      input, textarea {
-        width: 536px;;
-      }
-    }
-    li.twoRow {
-      height: 85px;;
-      textarea {
-        height: 65px;
-        padding: 10px;
-      }
-    }
 
-    li.icon {
-      input {
-        @include border-left-radius(6px);
-        @include border-right-radius(0px);
-        width: 210px;
-      }
-      input.right { @include border-radius(0px); }
-      div {
-        @include border-right-radius(10px);
-        @include box-shadow(0 1px 1px #9A9A9A inset);
-        text-indent: -5000px;
-        display: block;
-        float: right;
-        height: 25px;
-        width: 29px;
-      }
-      div.lock { background: url("/images/login.png") no-repeat scroll center center transparent; }
+div#top_form form, div#resources form {
+  li.field {
+    @include border-radius(6px);
+    @include box-shadow(inset 0px 2px 2px #B2B3B5, 0px 1px 0 #fff);
+    @include background-image(linear-gradient(top center, #E9E9E9, #D7D7D7));
+    position: relative;
+    
+    input, textarea {
+      @include border-radius(6px);
+      @include box-shadow(0 1px 1px #9A9A9A inset);
+      @include background-image(linear-gradient(center top, #F3F3F3,  #FFFFFF));
+      
+      &.left { @include border-left-radius(6px); @include border-right-radius(0px); }
+      &.middle { @include border-left-radius(0px); @include border-right-radius(0px); }
+      &.right { @include border-left-radius(0px); @include border-right-radius(6px); }
     }
-    li.half.icon {
-      input { width: 93px; }
-      label.right { left: 136px; }
-    }
-    li.third.icon {
-      input { width: 50px; }
-      input.right { width: 137px; }
-      label.right { left: 95px; }
-    }
-  
-    li.twoColumn.third {
-      input { width: 162px; }
-      label.middle { left: 205px; }
-      label.right { left: 390px; }
-    }
+    label { position: absolute; }
   }
 }
 
 
+div#top_form form {
+  li.field {
+    @include column(25);
+    height: 25px;
+    padding: 10px;
+    margin: 10px;
+    
+  
+    input, textarea {
+      height: 25px;
+      width: 230px;
+      padding: 1px 10px 0px 10px;
+      border: medium none;
+      font-size: 15px;
+    }
+    select {
+      width: 250px;
+      height: 27px;
+      font-size: 15px;
+    }
+    label {
+      top: 15px;
+      left: 21px;
+      font-size: 15px;
+    }
+  }
+  
+  li.half {
+    input { width: 103px; }
+    select { width: 110px; }
+    label.right { left: 147px; }
+  }
+  li.third {
+    input.left { width: 50px; }
+    select { width: 70px; }
+    input.right { width: 155px; }
+    label.right { left: 95px; }
+  }
+  li.twoColumn {
+    width: 556px;
+    input, textarea { width: 536px; }
+  }
+  li.twoRow {
+    height: 85px;;
+    textarea {
+      height: 65px;
+      padding: 10px;
+    }
+  }
+}
 
-div#top_form {
+div#resources form {
+  li.field {
+    @include column(28);
+    margin: 6px 4px 6px 0px;
+    padding: 5px;
+    &:last-child { margin-right: 0px; };
+    
+    input, textarea {
+      @include border-radius(6px);
+      @include box-shadow(0 1px 1px #9A9A9A inset);
+      @include background-image(linear-gradient(center top, #F3F3F3,  #FFFFFF));
+      height: 25px;
+      width: 260px;
+      padding: 1px 10px 0px 10px;
+      border: medium none;
+      font-size: 15px;
+    }
+    label {
+      top: 10px;
+      left: 15px;
+      font-size: 15px;
+    }
+    select {
+      width: 250px;
+      height: 24px;
+      font-size: 15px;
+    }
+    &.half {
+      input { width: 118px !important; }
+      select { width: 110px; }
+      label.right { left: 155px; }
+    }
+    &.third {
+      input.left { width: 50px; }
+      select { width: 70px; }
+      input.right { width: 185px; }
+      label.right { left: 90px; }
+    }
+  }
+  li.field.threeColumn {
+    width: 580px;
+    input, textarea { width: 560px; }
+  }
+  div.buttons {
+    @include border-radius(6px);
+    border-top: 5px solid $orange;
+    padding: 10px;
+    background-color: #3A4244;
+    li { @include column(26); }
+    li.toggle {
+      margin-right: 342px;
+      a {
+        @include fancy-button(#ccc, 12px);
+        &.active { @include fancy-button($orange, 12px); }
+      }
+    }
+    li.submit input {
+      @include fancy-button($orange, 12px);
+      float: right;
+    }
+  }
+}
+
+/* LAYOUT OUTER FOR AND BUTTONS */
+div#top_form{
   @include border-radius(6px);
   background-color: $yellow;
   border: 1px solid #3A4244;
@@ -132,45 +151,42 @@ div#top_form {
       top: 0px;
       left: 610px;
     }
-    form {
-      div.full_column, div.right_column { padding: 10px 0px 10px 10px !important; }
-      li.field div.field_with_errors {
-        input, textarea {
-          @include background-image(linear-gradient(center top, #fc7878,  #fc3a3a));
-          color: white;
+  }
+  
+  legend {
+    color: #730303;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 10px;
+  }
+  
+  form {
+    div.full_column, div.right_column { padding: 10px 0px 10px 10px !important; }
+    div.buttons {
+      @include border-radius(6px);
+      border-top: 5px solid $orange;
+      padding: 10px;
+      background-color: #3A4244;
+      
+      li { @include column(26); }
+      li.toggle {
+        margin-right: 360px;
+        a {
+          @include fancy-button(#ccc, 12px);
+          &.active { @include fancy-button($orange, 12px); }
         }
-        label { color: white; }
       }
-      div#buttons {
-        @include border-radius(6px);
-        border-top: 5px solid $orange;
-        padding: 20px;
-        background-color: #3A4244;
-        li.toggle {
-          @include column(28);
-          margin-right: 300px;
-          a {
-            padding-top: 6px !important;
-            width: 252px !important;
-            height: 20px !important;
-            text-align: center;
-          }
-          a.active { @include fancy-button($orange, 12px); }
-          a.inactive { @include fancy-button(#ccc, 12px); }
-        }
-        li.submit {
-          @include column(28);
-          input {
-            float: right;
-            margin: 0px !important;
-            width: 280px;
-            height: 30px;
-          }
-        }
+      li.submit input, li.submit a {
+        @include fancy-button($orange, 12px);
+        float: right;
       }
     }
   }
-  
+}
+
+
+/* DISPLAY ERRORS */
+div#top_form {
   div.errors {
     @include background-image(linear-gradient(center top, #fc7878,  #fc3a3a));
     @include border-top-radius(6px);
@@ -189,5 +205,34 @@ div#top_form {
       font-size: 13px;
       line-height: 20px;
     }
+  }
+  form li.field div.field_with_errors {
+    input, textarea { @include background-image(linear-gradient(center top, #fc7878,  #fc3a3a)); }
+    input, textarea, label { color: white; }
+  }
+}
+div#resources {
+  div.errors {
+    @include background-image(linear-gradient(center top, #fc7878,  #fc3a3a));
+    @include border-radius(6px);
+    padding: 10px;
+    h3 {
+      color: white;
+      font-size: 13px;
+      font-weight: bold;
+      border-bottom: 2px dotted white;
+      margin-bottom: 5px;
+      padding-bottom: 2px;
+    }
+    ul li {
+      @include column(43);
+      color: white;
+      font-size: 13px;
+      line-height: 20px;
+    }
+  }
+  form li.field div.field_with_errors {
+    input, textarea { @include background-image(linear-gradient(center top, #fc7878,  #fc3a3a)); }
+    input, textarea, label { color: white; }
   }
 }
