--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -21,14 +21,14 @@ body, p, ol, ul, td {
   line-height: 18px;
 }
 div#bodyGradient {
-  @include gradient(#EFF6FF, #4A6A83);
+  @include background-image(linear-gradient(center top, #EFF6FF,  #4A6A83));
   min-height: 100%;
   height: 100%;
 }
 div#navigation {
+  @include background-image(linear-gradient(center top, #717d7f,  #272c2d));
   div.container { @include container; }
   height: 50px;
-  @include gradient(#717d7f, #272c2d);
   margin-bottom: 40px;
   ul {
     padding-top: 9px;
@@ -36,7 +36,6 @@ div#navigation {
 	    -moz-box-shadow: inset 1px 3px 2px #bfbbbb;
       @include grid(15,0,1);
       @include roundedTop;
-      /*@include gradient(#1D88D8, #005DAA);*/
 	    border-bottom: 1px solid black;
       a { color: $darkGrey; font-weight: bold;}
       line-height: 40px;
@@ -48,7 +47,6 @@ div#navigation {
     }
     li.active {
 	  margin-top:0px;
-      @include gradient(transparent, transparent);
       background-color: $yellow;
 	    border-color: $yellow;
       a { color: $darkRed; font-weight: bold;}
@@ -84,7 +82,6 @@ div#navigation {
      }
    }
     li.user {
-      @include gradient(transparent, transparent);
       @include grid(15,0,1);
       border: none;
       font-size: 12px;
@@ -115,18 +112,6 @@ div#content {
     background-color: $darkGrey;
     color: $darkGrey;
   }
-  form {
-/* 	@include rounded;
-	background-color: $yellow;
-  padding-top: 15px;
-  padding-left: 5px;*/
-    input.submit {
-        @include fancy-button(#FF4E00, 13px);
-        width: 200px;
-        margin-bottom: 20px;
-    }
-	
-	  }
   div.toolbar {
     @include rounded();
     background-color: white;
