--- a/app/views/customers/contacts/_form.html.haml
+++ b/app/views/customers/contacts/_form.html.haml
@@ -1,33 +1,38 @@
 = form_for([@customer, @location, @contact], :html => {:style => "display: #{@show_contact_form ? 'block' : 'none'};"}) do |f|
   %fieldset
-    -if @contact.errors.any?
-      #error_explanation
-        %h2= "#{pluralize(@contact.errors.count, "error")} prohibited this contact from being saved:"
-        %ul
-          = @contact.errors.full_messages.each do |msg|
-            %li= msg
     %legend= t('helpers.form', :model=> Contact.model_name.human)
-    = link_to image_tag("/images/icons-nancy/container-close.gif"), :back
-    %hr.clear/
-    %dl
-      %dt= f.label :salutation
-      %dd
+    -if @contact.errors.any?
+      .errors
+        %h3= t('errors.template.header', :model=> Contact.model_name.human, :count=> @contact.errors.count)
+        %ul
+          - @contact.errors.full_messages.each do |msg|
+            %li= msg
+        .clear
+    %ul
+      %li.field.third
         = f.select(:salutation, options_for_select(["Mr.", "Ms."]))
-        =f.text_field :title, :class => "title"
-      %dt= f.label :firstname
-      %dd= f.text_field :firstname
-      %dt= f.label :lastname
-      %dd= f.text_field :lastname
-      %dt= f.label :department
-      %dd= f.text_field :department
-      %dt= f.label :email
-      %dd= f.text_field :email
-      %dt= f.label :fon
-      %dd= f.text_field :fon
-      %dt= f.label :fax
-      %dd= f.text_field :fax
-      %dt= f.label :mobile
-      %dd= f.text_field :mobile
-      %dt.submit
+        = f.label :title, :class => 'right'
+        = f.text_field :title, :class => "right"
+      %li.field.half
+        = f.label :firstname, :class => 'left'
+        = f.text_field :firstname, :class => 'left'
+        = f.label :lastname, :class => 'right'
+        = f.text_field :lastname, :class => 'right'
+      %li.field
+        = f.label :department
+        = f.text_field :department
+      %li.field.half
+        = f.label :fon, :class => 'left'
+        = f.text_field :fon, :class => 'left'
+        = f.label :mobile, :class => 'right'
+        = f.text_field :mobile, :class => 'right'
+      %li.field
+        = f.label :email
+        = f.text_field :email
+  .buttons
+    %ul
+      %li.toggle= link_to 'Abbrechen', [@customer, @location]
+      %li.submit
         = f.hidden_field :location_id, :value => @location.id
         = f.submit t('helpers.submit.submit', :model=> Contact.model_name.human), :class => "submit"
+    .clear
