--- a/app/views/projects/details/_users.html.haml
+++ b/app/views/projects/details/_users.html.haml
@@ -16,5 +16,5 @@
     %li.location &nbsp;
     %li.actions
       = mail_to user.email, image_tag("/images/icons-nancy/mail.gif")
-      -#= link_to image_tag("/images/icons-nancy/delete.gif"), unsubscribe_user_project_path(@project.id, :user_id => user.id), :method => "delete"
+      = link_to image_tag("/images/icons-nancy/delete.gif"), unsubscribe_user_project_path(@project.id, :user_id => user.id), :method => "delete"
     .clear
