--- a/app/views/users/mailer/confirmation_instructions.html.haml
+++ b/app/views/users/mailer/confirmation_instructions.html.haml
@@ -1,4 +1,29 @@
+%p Hallo #{@resource.firstname},
+%p vielen Dank für dein Interesse an Nancy. Damit du sofort loslegen kannst, erhälst du auch sofort Adresse und Zugangsdaten für den von dir angeforderten Nancy-Testaccount...
 %p
-  Welcome #{@resource.email}!
-%p You can confirm your account through the link below:
-%p= link_to 'Confirm my account', confirmation_url(@resource, :confirmation_token => @resource.confirmation_token)
+  Web-Adresse: #{link_to 'Link', root_path}
+  %br/
+  Benutzer: #{@resource.email}
+  %br/
+  Passwort: [Ihr gewähltes Passwort]
+%p wir wünschen dir nun viel Spass beim Testen von Nancy und freuen uns natürlich über dein Feedback.
+%p Mit besten Grüßen, dein Nancy-Team
+%p
+  --
+  %br/
+  Tel.: 0911/780784-32
+  %br/
+  Fax: 0911/780784-99
+  %br/
+  gw@wildner-designer.de
+  %br/
+  www.wildner-designer.de
+  %br/
+  %br/
+  Wildner + Designer GmbH
+  %br/
+  Hans-Vogel-Straße 42 - 90765 Fürth
+  %br/
+  Registergericht: Amtsgericht Fürth, HRB 11981
+  %br/
+  Geschäftsführer: Stefan Wildner
