--- a/app/views/projects/_list.html.haml
+++ b/app/views/projects/_list.html.haml
@@ -41,4 +41,9 @@
             = render :partial => 'projects/expenses/list' 
           - else
             = render :partial => 'projects/expenses/form'
+        .invoices
+          - if !@show_invoice_form
+            = render :partial => 'projects/invoices/list' 
+          - else
+            = render :partial => 'projects/invoices/form'
       .clear
